# yolov8face

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
tests/: test_yolo_model.py
yolov8face/: __init__.py  cli.py  yolo_model.py
yolov8face.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
