[metadata]
name = yolov8face
version = 0.1.1
description = YOLOv8Face provides a simple interface for Ultralytics face detection
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
packages = find:
install_requires =
    ultralytics
include_package_data = True

[options.extras_require]
dev =
    pytest
